MEC Production/MEC Production/src/objects/Customer_Category_Classfication__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <description>SAP Customer Code</description>
        <formula>Account__r.SAP_ID__c</formula>
        <inlineHelpText>SAP Customer Code</inlineHelpText>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Category_Classfications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Level__c</fullName>
        <globalPicklist>Classification_Level</globalPicklist>
        <label>Classification Level</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Category_Classfications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>Product Category</label>
        <type>Picklist</type>
    </fields>
    <label>Customer Category Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Classification_Level__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Customer Category Classfication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Category Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>